etc/kube/ww-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: waterwheel
  labels:
    name: waterwheel
