etc/kube/ww-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-stack.yml
    kompose.service.type: LoadBalancer
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: ww-api
  name: ww-api
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: ww-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-stack.yml
        kompose.service.type: LoadBalancer
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.service: ww-api
    spec:
      containers:
        - args:
            - api
          image: waterwheel:local
          name: ww-api
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
