etc/kube/ww-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-stack.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: ww-scheduler
  name: ww-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ww-scheduler
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-stack.yml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.service: ww-scheduler
    spec:
      containers:
        - args:
            - scheduler
          image: waterwheel:local
          name: ww-scheduler
          resources: {}
      restartPolicy: Always
status: {}
