etc/kube/ww-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-stack.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: ww-worker
  name: ww-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      io.kompose.service: ww-worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-stack.yml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.service: ww-worker
    spec:
      containers:
        - args:
            - worker
          image: waterwheel:local
          name: ww-worker
          resources: {}
      restartPolicy: Always
status: {}
