etc/kube/ww-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ww-worker
  name: ww-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ww-worker
  template:
    metadata:
      labels:
        app: ww-worker
    spec:
      containers:
        - name: ww-worker
          image: waterwheel:local
          args:
            - worker
        - name: vector
          image: timberio/vector:0.27.0-alpine
          ports:
            - containerPort: 8125
              name: statsd
              protocol: UDP
          volumeMounts:
            - name: vector-conf
              mountPath: "/etc/vector/"
              readOnly: true

      restartPolicy: Always
      volumes:
        - name: vector-conf
          configMap:
            name: vector-conf
