etc/kube/amqp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-stack.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: amqp
  name: amqp
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "8055"
      port: 8055
      targetPort: 15672
  selector:
    io.kompose.service: amqp
status:
  loadBalancer: {}
