etc/kube/amqp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: amqp
  name: amqp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amqp
  strategy: {}
  template:
    metadata:
      labels:
        app: amqp
    spec:
      containers:
        - image: rabbitmq:management-alpine
          name: amqp
          ports:
            - containerPort: 5672
            - containerPort: 15672
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: amqp
  name: amqp
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "8055"
      port: 8055
      targetPort: 15672
  selector:
    app: amqp
