etc/kube/opa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opa
  name: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
        - args:
            - run
            - --server
            - -a
            - 0.0.0.0:8181
            - -b
            - /policy
          image: openpolicyagent/opa
          name: opa
          ports:
            - containerPort: 8181
          resources: {}
          volumeMounts:
            - mountPath: /policy/policy.rego
              name: opa-policy
              subPath: policy.rego
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: policy.rego
                path: policy.rego
            name: opa-policy
          name: opa-policy

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opa
  name: opa
spec:
  ports:
    - name: "8181"
      port: 8181
      targetPort: 8181
  selector:
    app: opa
