etc/kube/ww-scheduler.yaml
apiVersion: v1
kind: Service
metadata:
  name: ww-scheduler
  labels:
    app: ww-scheduler
spec:
  clusterIP: None
  ports:
    - port: 7111
      name: gossip
  selector:
    app: ww-scheduler
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: ww-scheduler
  name: ww-scheduler
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ww-scheduler
  serviceName: "ww-scheduler"
  #minReadySeconds: 10
  template:
    metadata:
      labels:
        app: ww-scheduler
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ww-scheduler
          image: waterwheel:local
          args:
            - scheduler
        - name: telegraf
          image: telegraf:1.18
          ports:
            - containerPort: 8125
              name: statsd
              protocol: UDP
          volumeMounts:
            - name: telegraf-conf
              mountPath: "/etc/telegraf"
              readOnly: true

      volumes:
        - name: telegraf-conf
          configMap:
            name: telegraf-conf
