etc/kube/influxdb.yaml
# A Kubernetes setup for a basic stats pipeline
# Installs influxdb and telegraf

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: influxdb
    name: influxdb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: influxdb
    serviceName: influxdb
    template:
        metadata:
            labels:
                app: influxdb
        spec:
            containers:
              - image: influxdb:2.0.9
                name: influxdb
                ports:
                  - containerPort: 8086
                    name: influxdb
                volumeMounts:
                  - mountPath: /root/.influxdbv2
                    name: data
    volumeClaimTemplates:
      - metadata:
            name: data
        spec:
            accessModes:
              - ReadWriteOnce
            resources:
                requests:
                    storage: 10G
---
apiVersion: v1
kind: Service
metadata:
    name: influxdb
spec:
    type: NodePort
    ports:
      - name: influxdb
        port: 8086
        targetPort: 8086
    selector:
        app: influxdb

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
spec:
  rules:
    - host: influx.kube
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: influxdb
                port:
                  number: 8086
