etc/kube/ww-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: ww-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ww-api
  template:
    metadata:
      labels:
        app: ww-api
    spec:
      containers:
        - name: ww-api
          image: waterwheel:local
          args:
            - api
          ports:
            - containerPort: 8080

        - name: seal
          image: ghcr.io/sphenlee/sealproxy:main
          imagePullPolicy: Always
          args:
            - -c
            - /etc/sealproxy/sealproxy.yml
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /etc/sealproxy/sealproxy.yml
              name: sealproxy-config
              subPath: sealproxy.yml
            - mountPath: /etc/sealproxy/pubkey
              name: sealproxy-pubkey

        - name: telegraf
          image: telegraf:1.18
          ports:
            - containerPort: 8125
              name: statsd
              protocol: UDP
          volumeMounts:
            - name: telegraf-conf
              mountPath: "/etc/telegraf"
              readOnly: true

      restartPolicy: Always
      volumes:
        - name: sealproxy-config
          configMap:
            name: sealproxy-config
        - name: sealproxy-pubkey
          secret:
            secretName: sealproxy-pubkey
        - name: telegraf-conf
          configMap:
            name: telegraf-conf


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ww-api
  name: ww-api
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8081
  selector:
    app: ww-api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ww-api
  name: ww-api
spec:
  rules:
    - host: waterwheel.kube
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ww-api
                port:
                  number: 80
